[tool.poetry]
name = "fast-zero"
version = "0.1.0"
description = ""
authors = ["Josenilson <nilsonfsilva@hotmail,com.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
fastapi = "^0.111.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.0"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
taskipy = "^1.13.0"
httpx = "^0.27.0"

[tool.pytest.ini_options]
pythonpath = "."
#addopts ='no:warnings'

[tool.taskipy.tasks]
run = 'fastapi dev fast_zero/app.py'
pre_test = 'task lint'
test = 'pytest --cov=fast_zero -vv'
lint = 'ruff ckeck . ; ruff check . --diff'
format = 'ruff check . --fix ; ruff format .'
post_test = 'coverage html'
[tool.ruff]
line-length =79
extend-exclude = ['migrations']

[tool.ruff.lint]
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
